Added the guestbook component

--- a/Gemillan-Portfolio/.env
+++ b/Gemillan-Portfolio/.env
@@ -1,2 +1,2 @@
-VITE_SUPABASE_URL=
-VITE_SUPABASE_ANON_KEY=
+VITE_SUPABASE_URL=https://spqfvvdxklosaezmucsl.supabase.co
+VITE_SUPABASE_ANON_KEY=sb_publishable_mTyOkc7O06CQ80-O-PEmag_UHMavCrg
